fixed double tap zoom on mobile

--- a/play/index.css
+++ b/play/index.css
@@ -80,6 +80,10 @@ a {
 	flex-wrap: wrap;
 }
 
+svg {
+	touch-action: manipulation;
+}
+
 .cell {
 	fill: var(--cell-background);
 }
